# admi

./: .env.sample  .gitignore  AGENTS.md  CLAUDE.md  DEPLOY.md  DISCORD_TO_TELEGRAM_IMPL.md  IMPLEMENTATION_SUMMARY.md  OCR_AUTO_ENABLE_TEST.md  OCR_GUIDE.md  OCR_QUICK_START.md  README.md  TESTING_GUIDE.md  all_code.txt  collected_code.txt  config.json.backup  config.json.before-fix  config.sample.json  deploy.sh  ecosystem.config.js  findings.md  fix_ocr_server.sh  fix_rapidocr_headless.sh  next.config.mjs  package.json  paddle_ocr_server.js  pnpm-lock.yaml  quick_fix_ocr.sh  server.ts  simple_ocr_server.js  task_plan.md  test.py  test_ocr.js  test_ocr.py  test_refactored_ui.py  test_ui.py  tsconfig.bot.json  tsconfig.json  tsconfig.server.json  宝塔部署指南.md
.data/: message_map.json  status.json
.playwright-cli/: page-2026-03-17T05-27-35-588Z.yml  (+4 more)
telegram_bridge/: README.md  pyproject.toml  requirements.txt  test_basic.py
telegram_bridge/src/: bot_2523e06f-6c1f-4f75-804a-09062ad865e4.session-journal  bot_bot-1.session  bot_bot-1.session-journal
telegram_bridge/src/telegram_bridge/: __init__.py  bot.py  cli.py  client.py  connection.py  connection_errors.py  forwarder.py  ipc.py  main.py  media_handler.py  message_converter.py  replacements.py  session.py  telegram_types.py  types.py  wavespeed_watermark_remover.py
telegram_bridge/tests/: test_connection_errors.py  test_message_listener.py  test_mobile_client_watch_config.py  test_proxy_config.py  test_replacements.py  test_session_manager.py  test_telegram_channel_metadata.py  test_wavespeed_watermark_remover.py
(+237 files in other folders)
