[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram-bridge"
version = "0.1.0"
description = "Telegram Bridge Service for Discord Bot Integration"
authors = [
    {name = "Discord Bot Team", email = "admin@example.com"}
]
dependencies = [
    "telethon>=1.35.0",
    "cryptography>=42.0.0",
    "aiofiles>=24.1.0",
    "pydantic>=2.7.0",
    "loguru>=0.7.0"
]
requires-python = ">=3.8"
readme = "README.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
